<resources>
    <string name="app_name">homew3</string>
    <string name="attractions">Attractions</string>
    <string name="dining">Dining</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="health">Health</string>
    <string name="office">Office</string>
    <string name="promotions">Promotions</string>
    <string name="radio">Radio</string>
    <string name="recipes">Recipes</string>
    <string name="sport">Sport</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inventory">Inventory</string>
    <string name="weight">Weight</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="android">Android</string>
    <string name="_125">125</string>
    <string name="posts">Posts</string>
    <string name="_20k">20k</string>
    <string name="followers">Followers</string>
    <string name="_22">22</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="address_description">Address description</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
</resources>