<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"/>

    <EditText
        android:id="@+id/login"
        android:text="@string/login"
        android:textColor="@color/gray"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_layout_custom"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:text="@string/password"
        android:textColor="@color/gray"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_layout_custom"
        tools:ignore="RtlSymmetry" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/remember"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:layout_marginStart="100dp" />
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_sign_in_custom"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="190dp"
        android:text="@string/sign_in"
        android:textColor="@color/white" />

</LinearLayout>