<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/login"
        android:text="@string/login"
        android:textColor="#AAAAAA"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_layout_custom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        app:layout_constraintTop_toTopOf="@id/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/password"
        android:textColor="#AAAAAA"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_layout_custom"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/layout_remember_pass"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/password">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/remember"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            android:layout_marginStart="100dp" />
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="140dp"
        android:background="@drawable/button_sign_in_custom"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@id/layout_remember_pass"
        tools:layout_editor_absoluteX="105dp" />

</androidx.constraintlayout.widget.ConstraintLayout>