<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/android"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">



            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:background="#AAAAAA" />

            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_marginStart="40dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_125"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/posts"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="0dp"
                android:layout_weight="1"

                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20k"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/followers"
                    android:textColor="#000000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_22"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/following"
                    android:textColor="#000000"/>
            </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#000000"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_description"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#AAAAAA"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#AAAAAA"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#AAAAAA"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#AAAAAA"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#AAAAAA"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#AAAAAA"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_directions_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/directions"
                android:layout_gravity="center_horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textColor="#2B61F7"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_call_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:layout_gravity="center_horizontal"
                android:paddingStart="40dp"
                android:paddingEnd="10dp"
                android:textColor="#2B61F7"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_star_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center_horizontal"
                android:paddingStart="35dp"
                android:paddingEnd="10dp"
                android:textColor="#2B61F7"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_attachment_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/directions"
                android:layout_gravity="center_horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textColor="#2B61F7"/>
        </LinearLayout>





    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="#AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#AAAAAA"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#AAAAAA"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#AAAAAA"
        android:layout_marginTop="30dp"
        />
    </LinearLayout>


</LinearLayout>
